--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -9,13 +9,13 @@
 # NB: Please do not register commands here, these are done
 # directly in our plugin using Foundation :)
 #
-name: ${project.name}
-version: ${project.version}
-main: ${main.class}
+name: UltraColor
+version: @version@
+main: me.ultimategamer200.ultracolor.UltraColorPlugin
 author: UltimateGamer200
 website: https://www.spigotmc.org/resources/ultracolor.85332/
 description: Chat and name color plugin featuring color selection via GUI menus.
 softdepend: [ Essentials, CMI, PlaceholderAPI, NashornPlus, NBTAPI ]
-api-version: 1.13
+api-version: 1.20
 libraries:
   - org.openjdk.nashorn:nashorn-core:15.3
